implementata classe StdObj come non static
rivisto metodo extend di Vm